[tool.poetry]
name = "fastapi_sample"
version = "0.1.0"
description = ""
authors = ["Fernando Florencio <nandoflorencio13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.41"
pydantic = {extras = ["email"], version = "^1.10.2"}
bcrypt = "3.2.0"
passlib = "^1.7.4"
email-validator = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
prospector = "^1.7.7"
isort = "^5.10.1"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
